# AgenticExperiments

./: .gitignore  ModelComparerAndAnallyzer.py  README.md  main.py  pyproject.toml  run_server.py
src/agents/: ModelComparerAndAnalyzer.py  RunningWaterGemini.py  RunningWaterXAI.py  gemini_agent.py  xai_agent.py
src/agents/me/: about_me.py  gap_analyzer.py  profile_loader.py  response-evaluator.py  summmary.txt
src/apis/: api_server.py
src/machinelearning/basics/: pizza.py
src/models/: evaluation.py
src/utils/: cache.py  config.py
